<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>jikkou</artifactId>
        <groupId>io.streamthoughts</groupId>
        <version>0.17.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>jikkou-extension-kafka</artifactId>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <license.header.file>${project.parent.basedir}/license-header</license.header.file>
    </properties>

    <dependencies>
        <dependency>
            <groupId>io.streamthoughts</groupId>
            <artifactId>jikkou-resource-generator</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>io.streamthoughts</groupId>
            <artifactId>jikkou-api</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.kafka</groupId>
            <artifactId>kafka-clients</artifactId>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.dataformat</groupId>
            <artifactId>jackson-dataformat-yaml</artifactId>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jdk8</artifactId>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>
        <dependency>
            <groupId>jakarta.validation</groupId>
            <artifactId>jakarta.validation-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jsonschema2pojo</groupId>
            <artifactId>jsonschema2pojo-maven-plugin</artifactId>
        </dependency>
        <!-- START dependencies for test -->
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>testcontainers</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.vintage</groupId>
            <artifactId>junit-vintage-engine</artifactId>
            <scope>test</scope>
        </dependency>
        <!-- END dependencies for test -->
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-clean-plugin</artifactId>
                <configuration>
                    <filesets>
                        <fileset>
                            <directory>${project.basedir}/src/main/java/io/streamthoughts/jikkou/kafka/models</directory>
                            <includes>
                                <include>**/*.java</include>
                            </includes>
                            <followSymlinks>false</followSymlinks>
                            <useDefaultExcludes>true</useDefaultExcludes>
                        </fileset>
                    </filesets>
                </configuration>
            </plugin>
            <plugin>
                <dependencies>
                    <dependency>
                        <groupId>io.streamthoughts</groupId>
                        <artifactId>jikkou-resource-generator</artifactId>
                        <version>${project.version}</version>
                    </dependency>
                </dependencies>
                <groupId>org.jsonschema2pojo</groupId>
                <artifactId>jsonschema2pojo-maven-plugin</artifactId>
                <version>1.1.2</version>
                <configuration>
                    <sourceDirectory>${project.basedir}/src/main/json</sourceDirectory>
                    <targetPackage>io.streamthoughts.jikkou.kafka.models</targetPackage>
                    <generateBuilders>false</generateBuilders>
                    <addCompileSourceRoot>true</addCompileSourceRoot>
                    <outputDirectory>${project.basedir}/src/main/java</outputDirectory>
                    <includeSetters>false</includeSetters>
                    <includeGetters>true</includeGetters>
                    <useInnerClassBuilders>false</useInnerClassBuilders>
                    <includeJsr303Annotations>false</includeJsr303Annotations>
                    <useJakartaValidation>true</useJakartaValidation>
                    <includeHashcodeAndEquals>true</includeHashcodeAndEquals>
                    <includeAllPropertiesConstructor>true</includeAllPropertiesConstructor>
                    <includeConstructorPropertiesAnnotation>true</includeConstructorPropertiesAnnotation>
                    <includeConstructors>true</includeConstructors>
                    <customAnnotator>io.streamthoughts.jikkou.generator.JikkouAnnotator</customAnnotator>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>